--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,6 +69,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://careers.vidiq.com/o/data-engineer?utm_content=buffer0f226&utm_medium=social&utm_source=twitter&utm_campaign=buffer'>
+      Data Engineer - vidIQ
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978452-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -169,7 +175,7 @@
 <p><span class="badge badge-light">New York, NY  ?  New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424393-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424393-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -266,7 +272,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nine/743999698335573-senior-data-engineer'>Nine Senior Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nine/743999698335573-senior-data-engineer'>Nine Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -320,7 +326,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -477,10 +483,6 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 <h5><a href='https://jobs.lever.co/monocl/ae711abc-b602-435b-8181-10bf78d31fc5'>Monocl - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Gothenburg</span></p>
 <p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
-<p><span class="badge badge-light">Missouri, St. Louis</span></p>
-<p>Posted on:: 2019-10-26</p>
 <hr/>
 
 
